--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,7 +6,43 @@ on:
   push:
     branches:
       - main
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
+
+  build:
+    name: Flutter Build
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    env:
+      JAVA_VERSION: "11.0"
+      FLUTTER_VERSION: "3.10.0"
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
+      - run: flutter pub get
+
+      - run: flutter analyze
+
+      - run: flutter test
+
+      - run: flutter build web
+
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
@@ -18,3 +54,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEBAPPPUBLISH }}
           channelId: live
           projectId: webapppublish
+
