--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -42,14 +42,15 @@ jobs:
 
       - run: flutter build web
 
-  build_and_deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEBAPPPUBLISH }}
-          channelId: live
-          projectId: webapppublish
+      - run: firebase deploy --only hosting
+## build_and_deploy:
+##   needs: build
+##   runs-on: ubuntu-latest
+##   steps:
+##     - uses: actions/checkout@v4
+##     - uses: FirebaseExtended/action-hosting-deploy@v0
+##       with:
+##         repoToken: ${{ secrets.GITHUB_TOKEN }}
+##         firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEBAPPPUBLISH }}
+##         channelId: live
+##         projectId: webapppublish
